--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,3 +1,9 @@
+# Menentukan provider dan versi Python untuk konsistensi
+providers = ["python"]
+
+[variables]
+PYTHON_VERSION = "3.11" # Menggunakan versi Python yang stabil
+
 # Memberitahu Railway untuk menginstal paket sistem tambahan.
 [phases.setup]
 # Meminta instalasi FFmpeg menggunakan package manager 'apt'.
